# services/user/docs/swagger.json
@@ -104,7 +104,7 @@
                 }
             }
         },
-        "/users": {
+        "/users/all": {
             "get": {
                 "description": "Get all users",
                 "consumes": [
@@ -120,28 +120,7 @@
                 "responses": {}
             }
         },
-        "/users/me": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Get user by token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Get user by token",
-                "responses": {}
-            }
-        },
-        "/users/{id}": {
+        "/users/all/{id}": {
             "get": {
                 "description": "Get user by ID",
                 "consumes": [
@@ -163,6 +142,22 @@
                         "required": true
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/users/me": {
+            "get": {
+                "description": "Get user by token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get user by token",
                 "responses": {}
             }
         }
